# FEATURESPACE

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: example_usage.ipynb  exploratory_analysis.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/tmp/: cat_feature_index.64f98332-80d017bb-2d9561cf-abca592b.tmp  cat_feature_index.670cad65-745ed2b6-2be60e99-14a637ed.tmp  cat_feature_index.713007b8-d158e01a-2a3c6d70-6d1177b7.tmp  cat_feature_index.809e785e-386a2636-ba10fae5-c30f0f31.tmp  cat_feature_index.88897e24-798dc45e-8702bd34-e088214f.tmp  cat_feature_index.8e2c55e5-9b7ebd5a-cc6f5b9a-3a1046e2.tmp  cat_feature_index.956d35eb-6cdf821a-f3411ce-eed5ea2f.tmp  cat_feature_index.999abf85-6b72f24d-c0b7280a-39067f50.tmp  cat_feature_index.a6cc219f-c4bed1a7-7144ad37-aa32d0a2.tmp  cat_feature_index.b1b968e6-2ef1eef7-f77852d1-8aa777e9.tmp  cat_feature_index.b87c4cab-595b719a-f0cc3429-fedcf7c9.tmp  cat_feature_index.cc8e3ad3-ee61d03b-b2268785-830a77ae.tmp  cat_feature_index.db2b4dcb-19abe620-b2621e0d-45209936.tmp  cat_feature_index.e39b84cc-5a58ed20-81b0313e-4877fad5.tmp  cat_feature_index.ed44eb69-562ad74e-ce58476-218955a9.tmp
src/: config.py  data_utils.py  features.py  main.py
src/data/: make_dataset.py
src/features/: build_features.py
src/train/: cost_analysis.py  inference.py  model_utils.py  visualizations.py
